# spotify-analysis-ml

./: main.py  pyproject.toml
notebooks/: data_analysis.ipynb  ml_train.ipynb
